Fixed colour contrast on notification page.

--- a/scss/trema/message.scss
+++ b/scss/trema/message.scss
@@ -64,6 +64,13 @@ body#page-message-output-popup-notifications {
             .notification-area {
                 background-color: $white;
             }
+            .content-item-container:not(.selected):hover {
+                color: choose-contrast-color($primary);
+
+                .content-item-footer .timestamp {
+                    color: inherit;
+                }
+            }
         }
     }
 }
